tests/error/type_match/base_case_tuple_mismatched_elem_count1.bz
// error: unable to match type '[int32, float64, str]' to '[int32, float64]'
// note: mismatched tuple element counts: 3 and 2
function test()
{
	let _: [int32, float64] = [int32, float64, str]();
}
